tests/saved_state_init_recheck_ensure_parsed/saved_state_init_recheck_ensure_parsed.exp
There should be no errors when the saved state is generated
No errors!

Lazy init with saved state does not trigger a recheck
No errors!

The Flow server is currently in lazy mode and is only checking 1/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Focusing A.js reveals the errors
Error --------------------------------------------------------------------------------------------------------- B.js:3:9

Cannot import `A` because there is no `A` export in `./A`. [missing-export]

   3| import {A} from './A';
              ^


Error --------------------------------------------------------------------------------------------------------- B.js:5:2

Cannot cast `5` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   B.js:5:2
   5| (5: string);
       ^ [1]

References:
   B.js:5:5
   5| (5: string);
          ^^^^^^ [2]



Found 2 errors

The Flow server is currently in lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
